# IsalSR

./: README.md  pyproject.toml  scaffold.sh
.claude/: CLAUDE.md  settings.json
.claude/agents/: implementation-scientist.md  proposal-guard.md  test-runner.md
.claude/commands/: test-and-verify.md
.claude/hooks/: compact-context.sh
benchmarks/datasets/: __init__.py  feynman.py  nguyen.py  srbench.py
docs/: DEVELOPMENT.md  ISALSR_AGENT_CONTEXT.md
docs/changes/: onetoone_properties_changelog.md
docs/design/: choices.md  precomputed_cache_design.md
docs/tasks/: lessons.md  search_space_methodology_change.md  todo.md
docs/technical_report/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
experiments/: plotting_styles.py
experiments/configs/: bingo_feynman.yaml  bingo_nguyen.yaml  debug_bingo_feynman.yaml  debug_bingo_nguyen.yaml  debug_udfs_feynman.yaml  debug_udfs_nguyen.yaml  feynman.yaml  nguyen.yaml  srbench.yaml  udfs_feynman.yaml  udfs_nguyen.yaml
experiments/models/: __init__.py  analyze.py  base_runner.py  base_translator.py  hardware_info.py  io_utils.py  orchestrator.py  schemas.py
experiments/scripts/: _dag_generators.py  _figure_helpers.py  analyze_arxiv_results.py  analyze_results.py  exp1_shortest_path.py  exp2_neighborhood.py  exp3_canonicalization_time.py  exp5_pruning_accuracy.py  exp6_string_compression.py  generate_algorithm_overview.py  generate_fig_neighbourhood.py  generate_fig_p3_invariance.py  generate_fig_roundtrip.py  generate_fig_search_space.py  generate_fig_shortest_path.py  generate_property_figures.py  onetoone_properties.py  paired_comparison_analysis.py  pruning_experiment.py  run_all_arxiv_local.sh  run_gp.py  run_hill_climbing.py  run_local_permutation.sh  run_random_search.py  search_space_analysis.py  search_space_permutation_analysis.py  validate_cache.py  visualize_benchmark_equations.py
scripts/: validate_run_logs.py
slurm/: config.yaml  launch.sh  models_config.yaml  models_launch.sh
slurm/workers/: aggregate_results_slurm.sh  analyze_arxiv_slurm.sh  exp1_shortest_path_slurm.sh  exp2_neighborhood_slurm.sh  exp3_canonicalization_time_slurm.sh  exp5_pruning_accuracy_slurm.sh  exp6_string_compression_slurm.sh  generate_cache_slurm.sh  gp_canon_slurm.sh  gp_nocanon_slurm.sh  hill_climbing_canon_slurm.sh  hill_climbing_nocanon_slurm.sh  merge_cache_slurm.sh  models_analyze_slurm.sh  models_debug_slurm.sh  models_experiment_slurm.sh  (+5 more)
src/isalsr/: errors.py  (+2 more)
tests/: conftest.py
(+102 files in other folders)
